# connectedhomeip

./: .gitmodules  CODEOWNERS  Jenkinsfile  pipeline_metadata.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build.yaml  examples-linux-standalone.yaml  tests.yaml
allure-report/: index.html
allure-report/export/: influxDbData.txt
allure-report/nightly/: index.html
allure-report/nightly/10/: index.html
allure-report/nightly/11/: index.html
allure-report/nightly/12/: index.html
allure-report/nightly/13/: index.html
allure-report/nightly/15/: index.html
allure-report/nightly/16/: index.html
allure-report/nightly/17/: index.html
allure-report/nightly/20/: index.html
allure-report/nightly/21/: index.html
allure-report/nightly/22/: index.html
allure-report/nightly/23/: index.html
allure-report/nightly/24/: index.html
allure-report/nightly/25/: index.html
allure-report/nightly/28/: index.html
allure-report/nightly/29/: index.html
allure-report/nightly/30/: index.html
allure-report/nightly/33/: index.html
allure-report/nightly/34/: index.html
allure-report/nightly/35/: index.html
allure-report/nightly/37/: index.html
allure-report/nightly/38/: index.html
allure-report/nightly/39/: index.html
allure-report/nightly/40/: index.html
allure-report/nightly/42/: index.html
allure-report/nightly/43/: index.html
allure-report/nightly/9/: index.html
data_model/1.4.1/clusters/: Multicast.xml  cluster_ids.json
docs/ids_and_codes/: zap_clusters.md
docs/silabs/: NEW_FEATURES.md  conf.py
docs/silabs/general/: ARTIFACTS.md  COMMIT_HASHES.md
examples/all-clusters-app/all-clusters-common/: all-clusters-app.matter  all-clusters-app.zap
examples/all-clusters-app/linux/: main-common.cpp  main.cpp
examples/chip-tool/: main.cpp
examples/light-switch-app/light-switch-common/: light-switch-app.matter  light-switch-app.zap
examples/light-switch-app/silabs/: README.md  openthread.gni
examples/lighting-app/lighting-common/: lighting-app.zap
examples/lighting-app/silabs/: openthread.gn
examples/lit-icd-app/silabs/: README.md
examples/lock-app/lock-common/: lock-app.zap
examples/lock-app/silabs/: README.md
examples/platform/linux/: CommissionerMain.cpp
examples/platform/silabs/: BaseApplication.cpp  BaseApplication.h  FreeRTOSConfig.h  MatterConfig.cpp  MatterConfig.h  main.cpp  matter_shell.cpp
examples/smoke-co-alarm-app/smoke-co-alarm-common/: smoke-co-alarm-app.matter  smoke-co-alarm-app.zap
examples/thermostat/thermostat-common/: thermostat.matter  thermostat.zap
provision/: devices.yaml  provision.py  support.py
provision/blinky/: README.md  app.cpp  app.h  efr32.cpp  efr32.slcp  main.cpp  si917.cpp  si917.slcp  sl_wlan_config.h
provision/blinky/auto/si917/blinky_cmake/: CMakeLists.txt  CMakePresets.json  blinky.cmake
provision/generator/: BUILD.gn  app--.cpp  app.cpp  app.h  build_for_wifi_gnfile.gn  efr32.slcp  main.cpp  openthread.gni  si917.cpp  si917.slcp  wifi.gni
provision/images/: efr32mg12_psa123_nvm3k2.s37  efr32mg12_psa12_nvm3k1.s37  efr32mg12_psa12_nvm3k2.s37  efr32mg12_psa3_nvm3k2.s37  efr32mg24_psa123_nvm3k2.s37  efr32mg24_psa12_nvm3k1.s37  efr32mg24_psa12_nvm3k2.s37  efr32mg24_psa3_nvm3k2.s37
provision/modules/: channel.py  credentials.py  jlink.py  manager.py  tools.py  util.py
provision/modules/v1_0/: protocol.py
provision/support/: JLinkDevices.xml
scripts/: rules.matterlint
scripts/examples/: gn_silabs_example.sh
silabs_ci_scripts/pipeline/: apps.json  boards.json  soc.groovy
src/: BUILD.gn
src/access/: AccessControl.cpp  AccessControl.h  AuxiliaryACL.cpp  AuxiliaryACL.h  BUILD.gn
src/app/: BUILD.gn  CASEClient.cpp  CASEClient.h  CommandHandlerImpl.cpp  CommandHandlerImpl.h  InteractionModelEngine.cpp  ReadHandler.cpp  WriteHandler.cpp  chip_data_model.gni  zap_cluster_list.json
src/controller/: BUILD.gn  CHIPDeviceController.cpp  CHIPDeviceControllerFactory.cpp  CHIPDeviceControllerFactory.h  CHIPDeviceControllerSystemState.h
src/credentials/: BUILD.gn  GroupDataProvider.h  GroupDataProviderBase.cpp  GroupDataProviderBase.h  GroupDataProviderImpl.cpp  GroupDataProviderImpl.h  GroupDataProviderV2.cpp  GroupDataProviderV2.h  GroupcastDataProvider.cpp  GroupcastDataProvider.h  KeyManager.cpp  KeyManager.h  KeyManagerImpl.cpp  KeyManagerImpl.h  MulticastDataProvider.cpp  MulticastDataProvider.h  PersistentData.h
src/crypto/: BUILD.gn  CHIPCryptoPAL.cpp  CHIPCryptoPALOpenSSL.cpp  CHIPCryptoPALPSA.cpp  CHIPCryptoPALPSA.h  DefaultSessionKeystore.h  PSAKeyDerivation.cpp  PSAKeyDerivation.h  PSASessionKeystore.cpp  RawKeySessionKeystore.cpp
src/inet/: IPAddress.cpp  IPAddress.h
src/python_testing/: TC_ACE_1_6.py  TC_GC_common.py
src/test_driver/efr32/: BUILD.gn  args.gni
src/test_driver/efr32/src/: main.cpp
src/transport/: BUILD.gn  CryptoContext.cpp  GroupSession.h  GroupcastTesting.cpp  SecureMessageCodec.cpp  SessionManager.cpp  SessionManager.h
(+309 files in other folders)
